Adjusted values on spacing of talk page in relation to issue #78

--- a/website/static/website/css/talks.css
+++ b/website/static/website/css/talks.css
@@ -15,6 +15,18 @@
 .talk-template {
 	padding-top:10px;
 	padding-bottom:10px;
+	margin-right:8px;
+	font-family: adelle-light;
+	font-size: 12px;
+	position:relative;
+	height: 300px;
+	width: 240px;
+	float: left;
+}
+
+.talk-template-landing {
+    	padding-top:10px;
+	padding-bottom:10px;
 	margin-right:4px;
 	font-family: adelle-light;
 	font-size: 12px;
